fix missing margin between dialog buttons

--- a/components/edit-dialog/index.css
+++ b/components/edit-dialog/index.css
@@ -55,3 +55,7 @@ input {
 	grid-area: actions;
 	justify-self: right;
 }
+
+button {
+	margin-left: 10px;
+}
